Fix alignment navbar

--- a/style.css
+++ b/style.css
@@ -112,6 +112,7 @@ a {
 
 .navbar .right {
     display: flex;
+    align-items: center;
 }
 
 .navbar a {
